@@ -15,7 +15,7 @@ import java.util.stream.Collectors;
 public class EmployeeService implements IEmployeeService {
 
     //Section:-05 Using MySQL Repository to store employee payroll data
-    //UC-02 Ensure validation is done on the payroll DTO
+    //UC-04 ability to save employee payroll data to mysql DB
 
     @Autowired
     private EmployeeRepository repository;
@@ -23,14 +23,12 @@ public class EmployeeService implements IEmployeeService {
     //get all employees
     @Override
     public List<EmployeeDTO> getAllEmployees() {
-        log.info("Fetching all employees from database");
-        return repository.findAll().stream().map(this::convertToDTO).collect(Collectors.toList());
+        return repository.findAll().stream().map(this::convertToDTO).toList();
     }
 
-    //get employee by its id
+    //get employee by id
     @Override
     public Optional<EmployeeDTO> getEmployeeById(Long id) {
-        log.info("Fetching employee with ID: {}", id);
         Employee employee = repository.findById(id)
                 .orElseThrow(() -> new EmployeeNotFoundException("Employee not found with id: " + id));
         return Optional.of(convertToDTO(employee));
@@ -39,16 +37,14 @@ public class EmployeeService implements IEmployeeService {
     //add a new employee
     @Override
     public EmployeeDTO createEmployee(EmployeeDTO employeeDTO) {
-        log.info("Creating a new employee: {}", employeeDTO);
         Employee employee = convertToEntity(employeeDTO);
         Employee savedEmployee = repository.save(employee);
         return convertToDTO(savedEmployee);
     }
 
-    //update employee by id
+    //update employee by its id
     @Override
     public EmployeeDTO updateEmployee(Long id, EmployeeDTO employeeDTO) {
-        log.info("Updating employee with ID: {}", id);
         Employee employee = repository.findById(id)
                 .orElseThrow(() -> new EmployeeNotFoundException("Employee not found with id: " + id));
 
@@ -64,16 +60,15 @@ public class EmployeeService implements IEmployeeService {
         return convertToDTO(updatedEmployee);
     }
 
-    //delete employee by id
+    //delete employee
     @Override
     public void deleteEmployee(Long id) {
-        log.info("Deleting employee with ID: {}", id);
         Employee employee = repository.findById(id)
                 .orElseThrow(() -> new EmployeeNotFoundException("Employee not found with id: " + id));
         repository.delete(employee);
     }
 
-    //convert DTO
+    //convert to DTO
     private EmployeeDTO convertToDTO(Employee employee) {
         return new EmployeeDTO(employee.getName(), employee.getSalary(), employee.getGender(),
                 employee.getStartDate(), employee.getNote(), employee.getProfilePic(), employee.getDepartment());
@@ -81,14 +76,8 @@ public class EmployeeService implements IEmployeeService {
 
     //convert to entity
     private Employee convertToEntity(EmployeeDTO dto) {
-        Employee employee = new Employee();
-        employee.setName(dto.getName());
-        employee.setSalary(dto.getSalary());
-        employee.setGender(dto.getGender());
-        employee.setStartDate(dto.getStartDate());
-        employee.setNote(dto.getNote());
-        employee.setProfilePic(dto.getProfilePic());
-        employee.setDepartment(dto.getDepartment());
-        return employee;
+        return new Employee(dto.getName(), dto.getSalary(), dto.getGender(), dto.getStartDate(),
+                dto.getNote(), dto.getProfilePic(), dto.getDepartment());
     }
+
 }
